@@ -69,6 +69,7 @@ Engine fixes:
 * The executable directory is now used when trying to find PATH_DATA on Linux. (r-a-cristian-93)
 * Fix 'corpse_timeout' in engine/misc.txt being parsed incorrectly (r-a-cristian-93)
 * Reworked camera speed curve to prevent graphical "wiggle" during slow movement.
+* Fix missing effect description text in power tooltips when using built-in types.
 
 Game updates:
 
